--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -134,7 +134,6 @@ Support me: https://ko-fi.com/sapondanaisriwan
         }
     }
 
-
     /* Check if broswer support :has pseudo selectors */
     @css {
         @supports not selector(:has(*)) {
@@ -1011,6 +1010,9 @@ Support me: https://ko-fi.com/sapondanaisriwan
                 }
 
                 #container.ytd-searchbox {
+                    box-shadow: inset 0 1px 2px #eee;
+                    border: 1px solid #ccc i;
+                    border-right-color: t i;
                     background-color: #fff i;
                 }
 
@@ -1027,9 +1029,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
                 /* Voice serach */
                 #voice-search-button.ytd-masthead {
                     background-color: #f9f9f9;
-                    color: #0f0f0f i;
-
-                    .yt-spec-button-shape-next--mono.yt-spec-button-shape-next--text {
+                    button {
                         color: #0f0f0f i;
                     }
                 }
