--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -2677,12 +2677,10 @@ Support me: https://ko-fi.com/sapondanaisriwan
            /* Pin */
            "M16,11V3h1V2H7v1h1v8l-2,2v2h5v6l1,1l1-1v-6h5v-2L16,11z M17,14h-4h-1h-1H7v-0.59l1.71-1.71L9,11.41V11V3h6v8v0.41 l0.29,0.29L17,13.41V14z": "M16 5h.99L17 3H7v2h1v7l-2 2v2h5v6l1 1 1-1v-6h5v-2l-2-2V5z",
            /* Description */
-           "M15 15H3v2h12v-2zm0-8H3v2h12V7zM3 13h18v-2H3v2zm0 8h18v-2H3v2zM3 3v2h18V3H3z": "M15 15H3v2h12v-2zm0-8H3v2h12V7zM3 13h18v-2H3v2zm0 8h18v-2H3v2zM3 3v2h18V3H3z",
-           "": "",
-           "": "",
-           "": "",
-           "": "",
+           "M15 15H3v2h12v-2zm0-8H3v2h12V7zM3 13h18v-2H3v2zm0 8h18v-2H3v2zM3 3v2h18V3H3z": "M15 15H3v2h12v-2zm0-8H3v2h12V7zM3 13h18v-2H3v2zm0 8h18v-2H3v2zM3 3v2h18V3H3z"
         }
+
+        svgPolygonArr = ("18.4,14.6 12,8.3 5.6,14.6 6.4,15.4 12,9.7 17.6,15.4 " "19.35,11.5 11.5,3.65 3.65,11.5 4.35,12.21 11,5.56 11,20 12,20 12,5.56 18.65,12.21 " "18.65,11.65 12,18.29 12,4 11,4 11,18.29 4.35,11.65 3.65,12.35 11.5,20.21 19.35,12.35 ")
 
         replaceStr(str) {
             return replace(',', '\\,', str)
@@ -2699,6 +2697,17 @@ Support me: https://ko-fi.com/sapondanaisriwan
             changePath(key, value);
         }
 
+        changeColor(value) {
+            [points={s("%s", replaceStr(value))}] {
+                color: var(--yt-spec-grey-3);
+                stroke: currentColor;
+            }  
+        }
+        
+        for value in svgPolygonArr {
+            changeColor(value);
+        }
+        
         @css {
             /* Like */
             ytd-comment-action-buttons-renderer [d="M18.77,11h-4.23l1.52-4.94C16.38,5.03,15.54,4,14.38,4c-0.58,0-1.14,0.24-1.52,0.65L7,11H3v10h4h1h9.43 c1.06,0,1.98-0.67,2.19-1.61l1.34-6C21.23,12.15,20.18,11,18.77,11z M7,20H4v-8h3V20z M19.98,13.17l-1.34,6 C18.54,19.65,18.03,20,17.43,20H8v-8.61l5.6-6.06C13.79,5.12,14.08,5,14.38,5c0.26,0,0.5,0.11,0.63,0.3 c0.07,0.1,0.15,0.26,0.09,0.47l-1.52,4.94L13.18,12h1.35h4.23c0.41,0,0.8,0.17,1.03,0.46C19.92,12.61,20.05,12.86,19.98,13.17z"] {
@@ -2709,20 +2718,6 @@ Support me: https://ko-fi.com/sapondanaisriwan
             /* Liked */
             ytd-comment-action-buttons-renderer [d="M3,11h3v10H3V11z M18.77,11h-4.23l1.52-4.94C16.38,5.03,15.54,4,14.38,4c-0.58,0-1.14,0.24-1.52,0.65L7,11v10h10.43 c1.06,0,1.98-0.67,2.19-1.61l1.34-6C21.23,12.15,20.18,11,18.77,11z"] {
                 d: path("M1 21h4V9H1v12zm22-11c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-1.91l-.01-.01L23 10z");
-            }
-
-            /* Up Arrow shorts*/
-            polygon[points="18.4,14.6 12,8.3 5.6,14.6 6.4,15.4 12,9.7 17.6,15.4 "] {
-                color: var(--yt-spec-grey-3);
-                stroke: currentColor;
-            }
-
-            /* Up arrow shorts*/
-            polygon[points="19.35,11.5 11.5,3.65 3.65,11.5 4.35,12.21 11,5.56 11,20 12,20 12,5.56 18.65,12.21 "],
-            /* Down arrow shorts */
-            polygon[points="18.65,11.65 12,18.29 12,4 11,4 11,18.29 4.35,11.65 3.65,12.35 11.5,20.21 19.35,12.35 "] {
-                color: var(--yt-spec-grey-3);
-                stroke: currentColor;
             }
 
             ytd-mini-guide-entry-renderer [title="YouTube Music"] > yt-icon.ytd-mini-guide-entry-renderer,
