--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -6,7 +6,7 @@
 @homepageURL    https://github.com/sapondanaisriwan/AdashimaaTube
 @supportURL     https://github.com/sapondanaisriwan/AdashimaaTube/issues
 @updateURL      https://userstyles.world/api/style/6944.user.css
-@version        2.1.4
+@version        2.1.5
 @license        MIT
 @preprocessor   stylus
 
@@ -22,6 +22,7 @@
 @var checkbox oldBackground            "  🖼️ Old Background" 1
 @var checkbox oldPlaylists             "  ▶️ Old Playlist" 1
 @var checkbox oldIcons                 "  🧓 Old Icons" 0
+@var checkbox oldSearchBox             "  🔎 Old Search box" 0
 
 @var select customMoreVideos           "⚒️ Video Appearance" ["Enabled", "Disabled"]
 @var range videoPerRow                 "  ⚙️ Videos Per Rows" [5, 1, 15, 1]
@@ -143,7 +144,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
             defaultMargin();
         }
     }
-
+        
     /* Check if broswer support :has pseudo selectors */
     @css {
         @supports not selector(:has(*)) {
@@ -895,6 +896,48 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
     if (customOldLayout=="Enabled") {
 
+        if (oldSearchBox) {
+            ytd-searchbox.ytd-masthead {
+                > #search-icon-legacy.ytd-searchbox,
+                > #search-form.ytd-searchbox {
+                    height: 31.6px;
+                }
+            }
+
+            #search[has-focus] #search-input {
+                margin-left: 0 i;
+            }
+
+            #container.ytd-searchbox {
+                padding-left: 4px i;
+            }
+
+            ytd-searchbox[system-icons] #search-icon-legacy.ytd-searchbox yt-icon.ytd-searchbox {
+                width: 20px;
+                height: 20px;
+                color: var(--ytd-searchbox-legacy-button-icon-color);
+                opacity: 0.6;
+            }
+
+            #container.ytd-searchbox > [slot=search-input] input {
+                padding: 1px 2px i;
+                margin-left: 4px;
+            }
+
+            /* Hide search icon */
+            ytd-searchbox[has-focus] #search-icon.ytd-searchbox,
+            .sbpqs_a:before,
+            div.sbqs_c::before {
+                display: none;
+            }
+
+            @css {
+                [d="M20.87,20.17l-5.59-5.59C16.35,13.35,17,11.75,17,10c0-3.87-3.13-7-7-7s-7,3.13-7,7s3.13,7,7,7c1.75,0,3.35-0.65,4.58-1.71 l5.59,5.59L20.87,20.17z M10,16c-3.31,0-6-2.69-6-6s2.69-6,6-6s6,2.69,6,6S13.31,16,10,16z"] {
+                    d: path("M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z")
+                }
+            }
+        }
+        
         /* ▶️ Old Playlist */
         if (oldPlaylists) {
             /* ----- Playlist ----- */
