--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -127,7 +127,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
     /* Variables */
     i=!important;
     t=transparent;
-
+    
     defaultMargin() {
         margin-left: calc(var(--ytd-rich-grid-item-margin)/2);
         margin-right: calc(var(--ytd-rich-grid-item-margin)/2);
@@ -298,6 +298,10 @@ Support me: https://ko-fi.com/sapondanaisriwan
                         }
                     }
 
+                    ytd-brand-video-shelf-renderer[rounded-container]:not([is-first-feed-item]) {
+                        display: none;
+                    }
+                    
                     ytd-rich-shelf-renderer:not([is-shorts]) {
                         margin-bottom: 0 i;
                         display: contents;
@@ -2264,7 +2268,8 @@ Support me: https://ko-fi.com/sapondanaisriwan
         ytd-donation-shelf-renderer[modern-panels],
 
         /* video preview while hovering */
-        #video-preview-container.ytd-video-preview {
+        #video-preview-container.ytd-video-preview,
+        .ytp-autonav-endscreen-upnext-thumbnail {
             border-radius: borderRadius i;
         }
 
